--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </audio>
 <div class="sound">sound</div>
 
- <script src="/mo.min.js"></script>
- <script src="/index.js"></script>
+ <script src="./file/mo.min.js"></script>
+ <script src="./file/index.js"></script>
 </body>
 </html>
